# anyparse

./: .gitignore  Makefile  README.md  pyproject.toml
src/anyparse/: anyparse.py
src/anyparse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/foo_test_package.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_basic.py
