[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "anyparse"
authors = [{name = "Ryan Shang", email = "ykshang4119@gmail.com"}]
description = "A library that can parse data from given string"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/ryqdev/anyparse"