[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "anyparse"
version = "0.0.1"
authors = [{name = "Ryan Shang", email = "ykshang4119@gmail.com"}]
description = "A library that can parse data from given strings"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/ryqdev/anyparse"
